[tool.poetry]
name = "oil-fuel-stock-levels-uk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"
requests = "^2.24.0"
openpyxl = "^3.0.5"

[tool.poetry.dev-dependencies]
isort = "^5.5.3"
mypy = "^0.782"
flake8 = "^3.8.3"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
